Update some basic images, colors, copy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
 
   </head>
 
@@ -64,7 +64,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Web Developer</p>
+            <p class="text-faded mb-5" id="header">Web Developer</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
           </div>
         </div>
