change linkedin copy

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Check out Zack's LinkedIn Profile</h2>
-        <a class="btn btn-light btn-xl sr-button" href="https://www.linkedin.com/in/zack-frank/">LinkedIn</a>
+        <h2 class="mb-4">Zack Frank on LinkedIn</h2>
+        <a class="btn btn-light btn-xl sr-button" href="https://www.linkedin.com/in/zack-frank/">LinkedIn.com</a>
       </div>
     </section>
 
